# stackanetes

./: .gitignore  .travis.yml  AUTHORS  Dockerfile  NOTICE  README.md  TODO.md  demo_openstack.sh  deploy.sh  deploy_all.py  deploy_all.sh  docker-entrypoint.sh  env_openstack.sh  generate_config_file_sample.sh  manage_all.py  requirements.txt  setup.cfg  stackanetes-deployer.yml  stackanetes.yml  test_requirements.txt
ansible/: site.yml
cinder/: manifest.jsonnet
config/: all.yml
elasticsearch/: manifest.jsonnet
etc/: globals.yml  passwords.yml  stackanetes.sample
etcd/: manifest.jsonnet
glance/: manifest.jsonnet  manifest.yaml
horizon/: manifest.jsonnet
keystone/: manifest.jsonnet  manifest.yaml
kolla_k8s/: .gitignore  AUTHORS  __init__.py  configmap.py  exception.py  generate_config_file_sample.sh  k8s_instance.py  manifest.py  opts.py  requirements.txt  service.py  setup.cfg
kolla_k8s/cli/: service.py
kolla_k8s/cmd/: shell.py
kolla_k8s/common/: file_utils.py  mesos_utils.py  network_utils.py  type_utils.py  utils.py  zk_utils.py
kolla_k8s/config/: all.yml  k8s.py  kolla.py  network.py  openrc.j2  profiles.py  service.py  stackanetes.py  zookeeper.py
kolla_k8s/config/cinder/defaults/: main.yml
kolla_k8s/config/cinder/templates/: cinder-backup-ceph.conf.j2  cinder-ceph.conf.j2  cinder.conf.j2
kolla_k8s/config/common/: common_config.yml.j2
kolla_k8s/config/glance/defaults/: main.yml
kolla_k8s/config/glance/templates/: glance-api.conf.j2  glance-file.conf.j2
kolla_k8s/config/horizon/templates/: local_settings.j2
kolla_k8s/config/horizon_memcached/defaults/: main.yml
kolla_k8s/config/keystone/templates/: keystone.conf.j2  wsgi-keystone.conf.j2
kolla_k8s/config/neutron/templates/: ml2_conf.openvswitch.ini.j2  neutron.conf.j2  neutron.linuxbridge.conf.j2
kolla_k8s/config/nova/templates/: nova.conf.j2
kolla_k8s/config/rabbitmq/templates/: rabbitmq_clusterer.config.j2
kolla_k8s/container_scripts/: start.py
kolla_k8s/etc/oslo-config-generator/: kolla-k8s.conf
kolla_k8s/kolla_k8s/: __init__.py  configuration.py  opts.py  service_definition.py
kolla_k8s/kolla_k8s.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
kolla_k8s/kolla_k8s/cli/: service.py
kolla_k8s/kolla_k8s/common/: jinja_utils.py
kolla_k8s/kolla_k8s/config/: config_cli.py  kolla.py
kolla_k8s/kolla_k8s/container_scripts/: start.py
kolla_k8s/services/cinder/: cinder-backup.yml.j2  cinder-volume.yml.j2
kolla_k8s/services/glance/: glance-api.yml.j2  glance-init.yml.j2
kolla_k8s/services/ironic/: ironic-conductor.yml.j2
kolla_k8s/services/keystone/: keystone-init.yml.j2
kolla_k8s/services/mariadb/: mariadb.yml.j2
kolla_k8s/services/neutron/: neutron-server.yml.j2  openvswitch-db.yml.j2
kolla_k8s/services/nova/: nova-compute.yml.j2  nova-consoleauth.yml.j2  nova-init.yml.j2  nova-scheduler.yml.j2  nova-spicehtml3proxy.yml.j2
kolla_k8s/tests/: test_service.py
kolla_k8s/tests/fake_templates/: emptyDir.yml  mount_path.yml  multiple_ports.yml  no_ports.yml  no_service_type.yml  one_port.yml  simple-db-sync.yml
mariadb/: manifest.jsonnet  manifest.yaml
mariadb-galera/: manifest.jsonnet
memcached/: manifest.jsonnet  manifest.yaml
neutron/: manifest.jsonnet
nova/: manifest.jsonnet
rabbitmq/: manifest.jsonnet  manifest.yaml
rados-gateway/: manifest.jsonnet  manifest.yaml
rc/: generic-control.yml.j2  generic-init.yml.j2  generic-network-node.yml.j2  glance-init.yml  keystone-api.yml  keystone-db-sync.yml  keystone-init.yml  mariadb.yml  network-node.yml  neutron-init.yml  nova-api.yml  nova-conductor.yml  nova-consoleauth.yml  nova-novncproxy.yml  nova-scheduler.yml  rabbitmq.yml  zookeeper.yml
searchlight/: manifest.jsonnet
stackanetes/: __init__.py  configmap.py  defaults.libjsonnet  k8s_instance.py  manifest.jsonnet  manifest.py  manifest.yaml  opts.py  parameters.yaml  service.py
templates/: fluentd-elasticsearch.yml.j2  generic-compute-node.yml.j2  generic-daemonset.yml.j2  generic-deployment.yml.j2  generic-init.yml.j2  generic-job.yml.j2  glance-api.yml  glance-registry.yml  horizon.yml  job.yml  (+6 more)
(+451 files in other folders)
