[metadata]
name = Stackanetes
author = Intel
base on = openstack kolla and kolla-mesos projects

[files]
packages =
    kolla_k8s
data_files =
    share/kolla-k8s/config = config/*
    share/kolla-k8s/services = services/*
    share/kolla-k8s/stackanetes-services = stackanetes-services/*
    share/kolla-k8s/templates = templates/*

[entry_points]
console_scripts =
    kolla-k8s = kolla_k8s.cmd.shell:main

kolla_k8s.cli =
    run =  kolla_k8s.cli.service:Run
    kill =  kolla_k8s.cli.service:Kill

oslo.config.opts =
    kolla_k8s = kolla_k8s.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = true
autodoc_exclude_modules =
    *.tests.*
    kolla_k8s.cmd.*
    kolla_k8s.config.*
    kolla_k8s.opts
    kolla_k8s.cli.*
    kolla_k8s.common.*
    kolla_k8s.container_scripts.*


all_files = 1

[compile_catalog]
directory = kolla-k8s/locale
domain = kolla-k8s

[update_catalog]
domain = kolla-k8s
output_dir = kolla-k8s/locale
input_file = kolla-k8s/locale/kolla-k8s.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kolla-k8s/locale/kolla-k8s.pot
