[metadata]
name = Stackanetes
author = Intel
base on = openstack kolla and kolla-mesos projects

[files]
packages =
    stackanetes
data_files =
    share/stackanetes/config = config/*
    share/stackanetes/services = services/*
    share/stackanetes/stackanetes-services = stackanetes-services/*
    share/stackanetes/templates = templates/*

[entry_points]
console_scripts =
    stackanetes = stackanetes.cmd.shell:main

stackanetes.cli =
    run =  stackanetes.cli.service:Run
    kill =  stackanetes.cli.service:Kill

oslo.config.opts =
    stackanetes = stackanetes.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = true
autodoc_exclude_modules =
    *.tests.*
    stackanetes.cmd.*
    stackanetes.config.*
    stackanetes.opts
    stackanetes.cli.*
    stackanetes.common.*
    stackanetes.stackanetes-services.*


all_files = 1

[compile_catalog]
directory = stackanetes/locale
domain = stackanetes

[update_catalog]
domain = stackanetes
output_dir = stackanetes/locale
input_file = stackanetes/locale/stackanetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = stackanetes/locale/stackanetes.pot
